<resources>

    <string name="app_name">Examen</string>
    <string name="hint_one">User</string>
    <string name="hint_two">Password</string>
    <string name="hint_three">Name</string>
    <string name="hint_four">Email</string>
    <string name="hint_five">Confirm Password</string>

    <string name="text_nav">Examen Michael</string>
    <string name="text_nav_two">Universidad Peruana Union</string>

    <string name="text_menu_one">Lista De Eventos</string>
    <string name="text_menu_two">Registrar Asistencia</string>
    <string name="text_menu_three">Reporte Asistencia</string>
    <string name="text_menu_four">Usuarios</string>
    <string name="text_menu_five">Configuracion</string>
    <string name="text_button_scanner_one">scanner</string>
    <string name="text_button_scanner_two">guardar</string>

    <string name="name_button_one">Sign in</string>
    <string name="name_button_two">register</string>
    <string name="name_text_one">Sign up</string>


    <string name="margin_login">10dp</string>
    <string name="title_activity_menu">Menu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">salir</string>
    <string name="title_activity_menu_user">MenuUser</string>
    <string name="not_log_in">Nose puede iniciar sesion</string>
</resources>
