<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo"
    tools:context="com.upeu.msr.examen.Login"
    tools:layout_editor_absoluteY="73dp">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:baselineAligned="false"
        android:hint="@string/hint_one"
        android:textAlignment="center"
        android:background="@color/color_edidText"
        />

    <EditText
        android:id="@+id/password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:inputType="textPassword"
        android:hint="@string/hint_two"
        android:textAlignment="center"
        android:background="@color/color_edidText"
        />

    <Button
        android:id="@+id/SignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/name_button_one" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/signInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        />

    <TextView
        android:id="@+id/SignUp"
        android:layout_width="match_parent"
        android:layout_height="26dp"
        android:layout_margin="10dp"
        android:text="@string/name_text_one"
        android:textAlignment="center"
        android:textColor="@color/color_text"
        android:textSize="15dp"
        />
</LinearLayout>
